# datection_face

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.md  pyproject.toml
.cursor/agents/: memory-curator.md  planner.md
artifacts/runs/version_2/predictions/json/: CELU.json
configs/: camera_health.yaml  global.yaml
docs/: architecture.md  data_flow.md
src/detection_face/: __init__.py  composition.py
src/detection_face/application/: __init__.py
src/detection_face/application/gateways/: __init__.py  image_source.py  prediction_writer.py  run_logger.py
src/detection_face/application/pipeline/: analyze_photo_graph.py  analyze_photo_pipeline.py
src/detection_face/application/use_cases/: __init__.py  check_camera_health.py
src/detection_face/domain/: __init__.py
src/detection_face/domain/entities/: __init__.py  analyze_photo_result.py  camera_health_result.py  camera_heath_result.py  image.py
src/detection_face/domain/ports/: __init__.py  black_image_checker.py
src/detection_face/domain/services/ports/: black_frame_checker.py
src/detection_face/entrypoints/: __init__.py
src/detection_face/entrypoints/cli/: __main__.py  analyze.py
src/detection_face/infrastructure/config/: yaml_loader.py
src/detection_face/infrastructure/io/: image_reader.py
src/detection_face/infrastructure/logging/: filesystem_run_logger.py
src/detection_face/infrastructure/models/camera_health/: __init__.py  black_image.py  schemas.py
src/detection_face/infrastructure/storage/: filesystem_prediction_writer.py
